Fixed background on mobile versions

--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Noticia+Text:wght@700&display=swap');
 
+html, body {margin: 0; height: 100%; overflow: hidden}
+
 body {
   font-family: 'Noticia Text', serif;
   font-weight: bold;
   background: linear-gradient(90deg, rgba(135,203,38,1) 0%, rgba(13,104,180,1) 100%);
   background-size: 100%;
-  margin: 0;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   min-height: 100vh;
-  overflow: hidden;
-  width: 100%;
+  height: 100%;
 }
 
 .background {
-  position: absolute;
+  position: fixed;
   width: 200%;
   height: 200%;
   z-index: -1;
-  transform: rotate(-30deg);
   background-image: url('TEXTO!.png');
   background-repeat: repeat;
   background-size: contain;
+  transform: rotate(-30deg);
 }
 
 .card {
